[package]
name = "http_echo_ip"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
regex = "1.10.4"
tokio = { version = "1.37.0", features = ["io-util", "net", "rt", "rt-multi-thread", "macros"] }