[package]
name = "http_echo_ip"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
regex = "1.11.1"
reqwest = { version = "0.12.8", default-features = false, features = ["json", "blocking", "rustls-tls"] }
tokio = { version = "1.41.0", features = ["io-util", "net", "rt", "rt-multi-thread", "macros"] }
